Avoid using extremely high z-index values

--- a/packages/cms-admin/src/styles/parts/layout.sass
+++ b/packages/cms-admin/src/styles/parts/layout.sass
@@ -7,7 +7,7 @@
 		align-items: center
 		min-height: $layout-navbar-height
 		padding: 0 rem(10px)
-		z-index: $zindex-sticky
+		z-index: 30
 		background-color: $layout-background-color
 		color: $layout-text-color
 
@@ -18,7 +18,7 @@
 		+sticky($layout-navbar-height null null)
 		width: rem(160px)
 		height: calc(100vh - #{$layout-navbar-height})
-		z-index: $zindex-sticky
+		z-index: 30
 		background-color: $layout-background-color
 		color: $layout-text-color
 
